kubernetes-orchestrations/simple-tls-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service-app
  labels:
    app: simple-service-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: simple-service-app
